<resources>
    <string name="nom_application">Easyportal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retour">Deconnexion</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="users">Utilisateur</string>
    <string name="valider">Valider</string>
    <string name="button_video">Video</string>
    <string name="button_retour">Retour</string>
    <string name="nom_prenom">Nom et Prénom de l\'utilisateur</string>
    <string name="heure">Heure d\'ouverture</string>
    <string name="heure_close">Heure de fermeture</string>
    <string name="log">Log</string>
    <string name="portail">Portail</string>
    <string name="button">Portail</string>
<!--    <string name="retour1">Retour</string>-->


    <!-- //   <string name=""></string>-->




</resources>