<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_page"
    tools:context=".Main7_accueil">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="446dp"
        android:layout_height="345dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/portail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/portail"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/button_video"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/users"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/log"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/deconnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/deconnexion"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="402dp"
        android:layout_height="227dp"
        android:text="Bienvenue, sélectionné votre menu!!"
        android:textColor="@color/red"
        android:textSize="43px"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

</androidx.constraintlayout.widget.ConstraintLayout>