<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_page"
    tools:context=".Main6_log">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="32dp">

        <TextView
            android:id="@+id/nom_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Nom et Prénom de l'utilisateur" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/heure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Heure d'ouverture" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/heure_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Heure de fermeture" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        tools:layout_editor_absoluteX="-5dp"
        android:layout_width="408dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2">-->

        <Button
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/users"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="10sp" />

        <Button
            android:id="@+id/portail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/portail"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="8sp" />

        <Button
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_video"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="9sp" />

        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Accueil"
            android:textColor="@color/white"
            android:textSize="9sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>