<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_page"
    tools:context=".Main8_gestion_user">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Page de gestion d'utilisateur"
        android:textColor="@color/red"
        android:textSize="45px"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="424dp"
        android:layout_height="69dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <!--        app:layout_constraintTop_toBottomOf="@+id/textView2">-->

        <Button
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textSize="30px" />

        <Button
            android:id="@+id/portail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/portail"
            android:textColor="@color/white"
            android:textSize="30px" />

        <Button
            android:id="@+id/Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/button_video"
            android:textColor="@color/white"
            android:textSize="30px" />

        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Accueil"
            android:textColor="@color/white"
            android:textSize="30px"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="404dp"
        android:layout_height="354dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ajouter_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ajouter un utilisateur"
            android:textColor="@color/white"
            android:textSize="25px" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Prenom"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="Nom"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="Role"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/enregistrer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="Enregistrer"
            android:textColor="@color/purple_200"
            android:textSize="40px"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="423dp"
        android:layout_height="248dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/restreinte_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="Supprimer un utilisateur"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nom de l'utilisateur"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/suppr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/supprimer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_200"
            android:text="Supprimer"
            android:textSize="40px"/>

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="110dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/voir_user"
                android:layout_width="424dp"
                android:layout_height="132dp"
                android:background="@android:color/transparent"
                android:text="Voir utilisateur"
                tools:layout_editor_absoluteX="-95dp"
                tools:layout_editor_absoluteY="608dp"
                android:textColor="@color/purple_200"
                android:textSize="40px"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>